<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:itemvalueview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/gray_3"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Repères nutritionnels pour 100g" />

    <com.example.openfoodfacts.ItemValueView
        android:id="@+id/fat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerVisibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:title="@string/information_fat"
        app:value="0,8g" />

    <com.example.openfoodfacts.ItemValueView
        android:id="@+id/saturatedFat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerVisibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fat"
        app:title="@string/information_saturated_fat"
        app:value="0,1g" />

    <com.example.openfoodfacts.ItemValueView
        android:id="@+id/sugar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerVisibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturatedFat"
        app:title="@string/information_sugar"
        app:value="5,2g" />

    <com.example.openfoodfacts.ItemValueView
        android:id="@+id/salt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerVisibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugar"
        app:title="@string/information_salt"
        app:value="0,75g" />

</androidx.constraintlayout.widget.ConstraintLayout>